# cmake-project-template

./: .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp
cmake/: Cache.cmake  CompilerWarnings.cmake  Doxygen.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Vcpkg.cmake  version.h.in
include/greeter/: greeter.h  version.h
src/: CMakeLists.txt  greeter.cpp
test/: CMakeLists.txt  tests.cpp
